--- a/src/index.css
+++ b/src/index.css
@@ -6,15 +6,18 @@
 }
 
 .email__dropdown{
-    position: relative;
+    position: absolute;
     border: 1px solid #000;
     cursor: pointer;
     padding: 0;
     margin: 0;
     z-index: 999;
+    background: #fff;
 }
 .email__dropdown li{
     list-style: none;
     text-align: left;
     padding: 0 5px;
+    z-index: 999;
+    /* background: #fff; */
 }
